<resources>
    <string name="app_name">FatherHome</string>
    <string name="google_maps_key" translatable="false">Google maps key here</string>
    <string name="sos_fragment_title">SOS</string>
    <string name="daily_bread_title">DailyBread</string>
    <string name="bible_fragment">Bible</string>
    <string name="language_russian">Russian</string>
    <string name="language_english">English</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_portuguese">Portuguese</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_logout_account">Logout current account?</string>
    <string name="menu_logout_logout">Logout</string>
    <string name="all_cancel">Cancel</string>
    <string name="channel_id">FatherHomeIdChannel</string>
    <string name="channel_name">Father Home Channel</string>
    <string name="channel_description">Father Home</string>
    <string name="bible_copyright" translatable="false">Bible copyright</string>
    <string name="spinner_book">Spinner with books</string>
    <string name="spinner_chapter">Spinner with chapters</string>
    <string name="button_search">Button search</string>
    <string name="image_sos">Image sos</string>
    <string name="web_view" translatable="false">Web View</string>
    <string name="toolbar_title_speech">Pastor\'s Speech</string>
    <string name="text_example" translatable="false">Lorem ipsum dolor sit amet,\nconsectetur adipiscing elit,\nsed eiusmod tempor incidunt ut labore et dolore magna aliqua.\nUt enim ad minim veniam,\nquis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat.\nQuis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\nExcepteur sint obcaecat cupiditat non proident,\nsunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="show_more_button">SHOW</string>
    <string name="button_share">Button Share</string>
    <string name="button_fav">Button Favorite</string>
    <string name="text_view_content">Text Content</string>
    <string name="image_pastor">Image Pastor</string>
    <string name="name_pastor">Name Pastor</string>
    <string name="description_pastor">Pastor description</string>
    <string name="toolbar_string">Toolbar</string>
    <string name="online_transmission">Online Transmission</string>
    <string name="pastor_speech_firebase_node">pastor_speech</string>
    <string name="sos_bible_firebase_node">sos_bible</string>
    <string name="our_pastors_firebase_node">our_pastors</string>
    <string name="dailybread_firebase_node">dailybread</string>
    <string name="image_logo">Image logo</string>
    <string name="content_description_address">Address</string>
    <string name="content_description_verse">Verse</string>
    <string name="no_connectivity">No Internet Connection</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>
    <string name="notification_text">Pastor Speech</string>
    <string name="speech">Speech</string>
    <string name="about_father_home">About</string>
    <string name="share_with">Share with</string>
    <string name="about_zennosti">Ценности</string>
    <string name="about_missia">Миция</string>
    <string name="about_vision">Видение</string>
    <string name="selected_eng_language">Bible will be shown in English</string>
    <string name="selected_rus_language">Bible will be shown in Russian</string>
    <string name="selected_es_language">Bible will be shown in Spanish</string>
    <string name="selected_pt_language">Bible will be shown in Portuguese</string>
    <string name="sosfragment_depression">Депрессия</string>
    <string name="angry">Гнев</string>
    <string name="tired">Усталость</string>
    <string name="alone">Одиночество</string>
    <string name="seeking_peace">Поиск мира</string>
    <string name="hope">Надежда</string>
    <string name="weak">Слабость</string>
    <string name="sad">Печаль</string>
    <string name="economy">Финансовые трудности</string>
    <string name="lost">Сомнения</string>
    <string name="looking_for_forgiveness">В поисках прощения</string>
    <string name="how_to_forgive">Научиться прощать</string>
    <string name="forgetting">Научиться забывать</string>
    <string name="fear_of_tomorrow">Страх перед будущим</string>
    <string name="sick">Болезнь</string>
    <string name="war">Духовная  война</string>
    <string name="nav_about_church">About Father Home</string>
    <string name="nav_photos">Our Photos</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_online">Online</string>
    <string name="nav_speech">Speech</string>
    <string name="nav_near_you">Around you</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_our_pastors">Our Ministers</string>
    <string name="nav_favorite">Favorite</string>
    <string name="mathew">Mathew</string>
    <string name="mark">Marck</string>
    <string name="luke">Luke</string>
    <string name="jhon">Jhon</string>
    <string name="zennosti_1">Христоцентричная церковь (Евангелие в центре всего)</string>
    <string name="zennosti_2">Библейская церковь (Священное Писание - единственный авторитет во всех вопросах веры и жизни)</string>
    <string name="zennosti_3">Церковь, которая ценит семью (комплексная помощь семьям)</string>
    <string name="zennosti_4">Многонациональная церковь (приобретение учеников из всех народов)</string>
    <string name="zennosti_5">Благословляющая церковь (культура поддержки и благословения)</string>
    <string name="zennosti_6">Современная церковь (сохраняя содержание, адаптивна в формах)</string>
    <string name="zennosti_7">Умножающаяся церковь (воспитание учеников, взращивание служителей, открытие новых групп роста, основание новых церквей)</string>
    <string name="ustroistvo_1">Командное руководство (главный пастырь - Христос)</string>
    <string name="ustroistvo_2">Вдохновляющее собрание (еженедельная встреча общины и периодическая встреча всех общин церкви)</string>
    <string name="ustroistvo_3">Группа роста (еженедельная встреча духовной подотчетности)</string>
    <string name="ustroistvo_4">Персональная ответственность в приобретении учеников</string>
    <string name="videnie_1">Приобретение учеников Иисуса Христа (Мф.28:18–20)</string>
    <string name="videnie_2">Благовестие и ученичество (ответственность каждого)</string>
    <string name="videnie_3">Служение духовными дарами (раскрытие потенциала для общества)</string>
    <string name="videnie_4">Разделять общение святых (ценить каждую встречу учеников Христа)</string>
    <string name="family">Family</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="estructura">estructura</string>
    <string name="nav_about_app">About the App</string>
    <string name="church_map_toolbar_title">Find us</string>
    <string name="favorite_toolbar_title">Favorite</string>
    <string name="church_location_raushkaya_address">Раушская Набережная 4/5, Москва, Россия</string>
    <string name="church_location_raushkaya_lat" translatable="false">55.748219</string>
    <string name="church_location_raushkaya_long" translatable="false">37.627184</string>
    <string name="church_location_raushkaya_service_hour">Воскресение 12:00</string>
    <string name="church_location_luzhniki_address">Лужнецкая наб., 2/4с4, Москва, Россия</string>
    <string name="church_location_luzhniki_lat" translatable="false">55.715489</string>
    <string name="church_location_luzhniki_long" translatable="false">37.573627</string>
    <string name="church_location_luzhniki_service_hour">Воскресение 12:00</string>
    <string name="church_service_time">Domingos de 12:00 a 13.30</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="deleted_from_favorites">Deleted from favorites</string>
    <string name="appwidget_text">Father Home Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="share_message_type" translatable="false">text/plain</string>
    <string name="selected_language">russian language active</string>
    <string name="gruppa_rosta_1_lat" translatable="false">55.752070</string>
    <string name="gruppa_rosta_1_lon" translatable="false">37.601358</string>
    <string name="gruppa_rosta_1_name">Сергей</string>
    <string name="gruppa_rosta_1_phone" translatable="false">+79671920920</string>
    <string name="gruppa_rosta_1_time">Вт 19:00</string>
    <string name="gruppa_rosta_2_lat" translatable="false">55.545319</string>
    <string name="gruppa_rosta_2_lon" translatable="false">37.542833</string>
    <string name="gruppa_rosta_2_name">Владимир</string>
    <string name="gruppa_rosta_2_phone" translatable="false">+79104813484</string>
    <string name="gruppa_rosta_2_time">Ср 19:00</string>
    <string name="gruppa_rosta_3_lat" translatable="false">55.707202</string>
    <string name="gruppa_rosta_3_lon" translatable="false">37.585583</string>
    <string name="gruppa_rosta_3_name">Брэд</string>
    <string name="gruppa_rosta_3_phone" translatable="false">+79152525200</string>
    <string name="gruppa_rosta_3_time">Ср/Чт 19.00</string>
    <string name="gruppa_rosta_4_lat" translatable="false">55.822723</string>
    <string name="gruppa_rosta_4_lon" translatable="false">37.384439</string>
    <string name="gruppa_rosta_4_name">Роман</string>
    <string name="gruppa_rosta_4_phone" translatable="false">+79686887070</string>
    <string name="gruppa_rosta_4_time">Ср 19:30</string>
    <string name="gruppa_rosta_5_lat" translatable="false">55.683386</string>
    <string name="gruppa_rosta_5_lon" translatable="false">37.622863</string>
    <string name="gruppa_rosta_5_name">Амир</string>
    <string name="gruppa_rosta_5_phone" translatable="false">+79032450099</string>
    <string name="gruppa_rosta_5_time">Ср 19:00</string>
    <string name="gruppa_rosta_6_lat" translatable="false">55.779720</string>
    <string name="gruppa_rosta_6_lon" translatable="false">37.600417</string>
    <string name="gruppa_rosta_6_name">Адам</string>
    <string name="gruppa_rosta_6_phone" translatable="false">+79689430084</string>
    <string name="gruppa_rosta_6_time">Вт 18:00</string>
    <string name="gruppa_rosta_7_lat" translatable="false">55.751660</string>
    <string name="gruppa_rosta_7_lon" translatable="false">37.817169</string>
    <string name="gruppa_rosta_7_name">Андрей</string>
    <string name="gruppa_rosta_7_phone" translatable="false">+79672666157</string>
    <string name="gruppa_rosta_7_time">Чт 19:30</string>
    <string name="gruppa_rosta_8_lat" translatable="false">55.741850</string>
    <string name="gruppa_rosta_8_lon" translatable="false">37.629295</string>
    <string name="gruppa_rosta_8_name">Олег</string>
    <string name="gruppa_rosta_8_phone" translatable="false">+79005559000</string>
    <string name="gruppa_rosta_8_time"></string>
    <string name="gruppa_rosta_9_lat" translatable="false">55.855224</string>
    <string name="gruppa_rosta_9_lon" translatable="false">37.652238</string>
    <string name="gruppa_rosta_9_name">Павел</string>
    <string name="gruppa_rosta_9_phone" translatable="false">+79857827290</string>
    <string name="gruppa_rosta_9_time">Чт 19:30</string>
    <string name="gruppa_rosta_10_lat" translatable="false">55.663629</string>
    <string name="gruppa_rosta_10_lon" translatable="false">37.483095</string>
    <string name="gruppa_rosta_10_name">Самуэл</string>
    <string name="gruppa_rosta_10_phone" translatable="false">+79153534929</string>
    <string name="gruppa_rosta_10_time">Чт 19:00</string>
    <string name="gruppa_rosta_11_lat" translatable="false">55.661249</string>
    <string name="gruppa_rosta_11_lon" translatable="false">37.182888</string>
    <string name="gruppa_rosta_11_name">Даниил</string>
    <string name="hymn_list">Himnos</string>
</resources>