<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:alpha="0.6"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:padding="@dimen/widget_margin">
    <TextView
        android:padding="8dp"
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/content_description_verse"
        android:text="@string/appwidget_text"
        android:textColor="#ffffff"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold|italic"/>

    <TextView
        android:contentDescription="@string/content_description_address"
        android:textStyle="italic"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceSmall"
        android:id="@+id/textViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="29dp"/>
</RelativeLayout>