<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.view.bible.BibleFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_no_connectivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/no_connectivity"
            android:gravity="center"
            android:text="@string/no_connectivity"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:contentDescription="@string/bible_fragment"
                    android:id="@+id/tv_bible"
                    android:gravity="start"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:contentDescription="@string/bible_copyright"
                    android:id="@+id/tv_bible_copyright"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </ScrollView>

        <Spinner
            android:id="@+id/spinner_book"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/spinner_book"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.09"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <ImageButton
            android:contentDescription="@string/button_search"
            android:id="@+id/button"
            app:srcCompat="@drawable/ic_search_black_24dp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/spinner_chapter"
            app:layout_constraintTop_toTopOf="parent"/>

        <Spinner
            android:id="@+id/spinner_chapter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/spinner_chapter"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>